--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.7.3",
     "dayjs": "^1.11.12",
     "oh-vue-icons": "^1.0.0-rc3",
     "pinia": "^2.1.7",
